# first-rust-course

./: Makefile  book.toml
docs/: 404.html  accelerometer_streaming.html  blink.html  embedded_introduction.html  enums.html  generics.html  hello_embedded_world.html  hello_world.html  index.html  introduction.html  microbit_introduction.html  ownership.html  parallel.html  print.html  searchindex.js  searchindex.json  serial.html  setting_up.html  syntax_basics.html  traits.html  traits_generics.html
microbit_template/: Cargo.toml  Embed.toml  Readme.md  build.rs
rustviz_plugin/: helpers.js
serial_port_processing/: Cargo.toml
serial_port_processing/src/: main.rs
src/: SUMMARY.md  accelerometer_streaming.md  blink.md  embedded_introduction.md  enums.md  generics.md  hello_embedded_world.md  hello_world.md  introduction.md  microbit_introduction.md  ownership.md  parallel.md  serial.md  setting_up.md  syntax_basics.md  traits_generics.md
