[package]
name = "microbit_template"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello"

[dependencies]
# cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
rtt-target = { version =  "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version =  "0.1.2", features = ["cortex-m"] }
microbit-v2 = "0.13.0"
# nb = "1.0.0"
# embedded-hal = "0.2.6"
